--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/config/default.json
+# dependencies
+/node_modules/
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/client/build
+/build
+
+# misc
+.DS_Store
+
+# /client/.env.local
+# /client/.env.development.local
+# /client/.env.test.local
+# /client/.env.production.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
