--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "glob-parent": "^5.1.2",
     "gravatar": "^1.8.2",
+    "immer": "^9.0.6",
+    "js-yaml": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "minimist": "^0.2.1",
     "mongoose": "^6.0.5",
-    "request": "^2.88.2"
+    "mpath": "^0.8.4",
+    "request": "^2.88.2",
+    "set-value": "^4.1.0",
+    "tar": "^4.4.19"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
