--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "glob-parent": "^5.1.2",
     "gravatar": "^1.8.2",
     "immer": "^9.0.6",
+    "is-svg": "^4.3.1",
     "js-yaml": "^3.14.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "minimist": "^0.2.1",
     "mongoose": "^6.0.5",
     "mpath": "^0.8.4",
+    "node-forge": "^0.10.0",
+    "object-path": "^0.11.8",
     "request": "^2.88.2",
+    "serialize-javascript": "^3.1.0",
     "set-value": "^4.1.0",
-    "tar": "^4.4.19"
+    "ssri": "^7.1.1",
+    "tar": "^4.4.19",
+    "y18n": "^4.0.3"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
